app/css/main.css
/* game colors */
.diet {
	color: #1b8c76;
}
.diet-bg {
	background-color: #1b8c76;
	color: #f2f2f2;
}
/*.oral-hygiene {
	color: #6abab8;
}
.oral-hygiene-bg {
	background-color: #6abab8;
	color: #f2f2f2 ;
}*/
.safety {
	color: #db584d;
}
.safety-bg {
	background-color: #db584d;
	color: #f2f2f2 ;
}
.drug-interaction {
	color: #ef9233;
}
.drug-interaction-bg {
	background-color: #ef9233;
	color: #f2f2f2 ;
}
.pt-inr-monitoring {
	color: #ddc02f;
}
.pt-inr-monitoring-bg {
	background-color: #ddc02f;
	color: #f2f2f2 ;
}
/*.drug-interaction {
	color: #ef9233;
}
.drug-interaction-bg {
	background-color: #ef9233;
	color: #f2f2f2 ;
}
.pt-inr-monitoring {
	color: #ddc02f;
}
.pt-inr-monitoring-bg {
	background-color: #ddc02f;
	color: #f2f2f2 ;
}*/
.info {
	color: rgba(221, 47, 134, 0.62);
}
.info-bg {
	background-color: rgba(221, 47, 134, 0.62);
	color: #f2f2f2 ;
}


/*Shared items*/
body { /* resetting the background color - offsets the issue in .app-body*/
	background-color: #f7f4ed;
}

.app-body{
	position: absolute;
	top: 50px;
	left: 0;
	right: 0;
	bottom: 0;
}


.user-welcome {
	margin-top: 0px;
	text-align: center;
	font-size: 24px;
	background-color:  #f2f2f2;
}

i.fa {
	padding-right: 8px;
}
i.fa.no-padding {
	padding-right: 0px;
}

.modal-footer {
	text-align: center;
}
.ca-btn-success {
	color: #f2f2f2;
    background-color: #405c70;
    border-color: #405c70;
}
#view-info {
	margin: 2px;
}

/*login page*/

.app-header {
	background-color: #405c70;
	padding-top: 5px;
	padding-bottom: 5px;
	color: white;
	height: 50px;
}

.title-header h1{
	font-weight: bold;
	color: #405c70;
}

.login-btn {
	padding-left: 0px;
	padding-right: 0px;
}

.login-body div {
	padding-top: 20px;
}

/* Registration Form */
/*.registration-form .form-control {
	border-radius: 0px;
	margin-top: 5px;
	margin-bottom: 5px;
	height: 40px;
	padding: 10px 20px;
	font-size: 18px;
	line-height: 1.2;
}*/

.registration-form .form-control {
	border: none;
	border-bottom: 1px solid #808080;
	margin-bottom: 5px;
	height: 40px;
	padding: 10px;
	font-size: 18px;
	line-height: 1.2;
	background-color: transparent;
	box-shadow: none;
	padding: 5px;
}

.btn-group.radio-button, .registration-form.radio-button {
	padding-top: 0px;
	margin-top: 10px
}

.registration-form button {
	margin-top: 20px;
}

/*landing page and info detail */
.landing-page-wrapper {
	margin-top: 50px;
	background-color: #fff;
	border-radius: 7px;
	padding: 5px 15px;
}
.info-table{
	border: none;
}
.info-table .glyphicon{
	color: #696969;
}
.info-detail .btn-div{
	padding: 15px;
	text-align: center;
}
#app-info-modal-body {
	background-color: #fff;
	border-radius: 7px;
	margin: 15px;
	color: #333
}
/*mini-game-launch page*/
.mini-game-launch-wrapper {
	margin-top: 50px;
}
.mini-game-launch-container {
	margin-bottom: 20px;
}
.mini-game-launch-inner {
	border-radius: 10px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	padding: 7px;
}
.mini-game-launch-container img {
	display: inline-block;
	border-radius: 50%;
	background-color: rgba(247,244,237,1);
}
.mini-game-launch-inner h3 {
	font-size: 5.5vw;
}

/* full-screen modal */
.modal-dialog.modal-fs {
	margin: 0;
	width: 100%;
	height: 100%;
}

.modal-dialog.modal-fs .modal-content {
	border-radius: 0;
	border: 0;
	/*background-color: rgba(50, 50, 50, .9);*/
	/*color: black;*/
	box-shadow: none;
	height: 100%;
}

.scenario-footer {
	/*text-align: right;*/
	padding: 10px;
	position: fixed;
	bottom: 0;
	left: 0;
	right: 0;
	height: 60px;
}

.scenario-footer #scenario-done-btn {
	float: right;
}

.score-change {
	font-size: 24px;
}

.score-change-good {
	color: #5cb85c;
}

.score-change-neutral {
	color: #f0ad4e;
}

.score-change-bad {
	color: #d9534f;
}

.vertical-align {
    display: flex;
    align-items: center;
}

/* minigames */
.minigame-wrapper{
	height: 100%;
}
.top-half-wrapper {
}
.bottom-half-wrapper {
	padding: 15px;
}
h3.mini-game-title {
	margin-bottom: 0px;
	margin-top: 5px;
	text-align: center;
}

/******* Diet *********/
.eating-wrapper {
	height: 100%;
}
.food-item-wrapper {
    border: 0;
    border-radius: 0px;
    max-height: 175px;
    max-width: 175px;
    padding: 0px;
}
.food-card {
	/*margin-top: 5px;
	margin-bottom: 20px;*/
	position: relative;
	padding: 5px;
}
/*.food-icon {
	vertical-align: baseline;
	width: 100%;
}*/
.food-icon {
    vertical-align: baseline;
    max-height: 100%;
    margin-left: auto;
    margin-right: auto;
}
.food-card-expand {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    margin: -20px;
    box-shadow: 0px 0px 20px 2px #444;
    background-color: white;
    border-radius: 15px;
    z-index: 10;
}
/*.food-card-expand .food-icon {
	margin: -20px;
}*/
.food-label {
    color: #405c70;
    font-weight: bold;
    line-height: 18px;
    position: absolute;
    width: 100%;
    text-align: center;
    padding: 0px;
    bottom: 6px;
}


#buffet-region {
	padding: 30px 0 0 0;
}
#buffet-region, #plate-region{
	height: 50%;
}
/*#plate-region {
	padding: 10px 15px;
	margin: 20px;
}*/

.eating-plate {
	background-image: url('/images/food-graphics/plate-setting.png');
	background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    padding: 10px 15px;
	margin: 20px;
}

.scenario-outer-wrapper {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 60px;
}

/*Info*/
#info-wrapper {
	padding: 40px;
}

.quarter-height {
	height: 25%;
	/*border: 1px solid red;*/
}

.half-height {
	height: 50%;
}

.full-height {
	height: 100%;
}

.instructions {
	/*margin: -10px -40px;*/
    /*background-color: lightblue;*/
    /*border-radius: 15px;*/
    /*margin: 15px;*/
    padding: 5px;
    text-align: center;
}

.diet-center-plate {
	background-image: url('/images/food-graphics/plate.png');
	background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    background-color: #ccc;
    border-radius: 20px;
    margin: 0 -50px;
}

.btn.diet-submit {
	position: absolute;
    bottom: 0;
    right: 0;
    margin: 5px;
}

.result-list {
	list-style: none;
}

.btn {
	border-radius: 8px;
}

img.scenario-badge {
	margin: 0 auto;
}

hr.modal-separator {
	border-color: e5e5e5;
}

.scenario-header-icon {
    float: left;
    border: 2px solid #ccc;
    border-radius: 50px;
}

